<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relevant_blueprint_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_56"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/str_dialog_choose_title"
        android:textColor="@color/c_464646"
        android:textSize="@dimen/dimen_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/c_80d8d8d8" />

    <TextView
        android:id="@+id/relevant_blueprint_bottom_create"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_56"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/str_dialog_new_repair"
        android:textColor="@color/c_00b5f2"
        android:textSize="@dimen/dimen_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_09"
        android:background="@color/c_99ffffff" />

    <TextView
        android:id="@+id/relevant_blueprint_bottom_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_56"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/str_dialog_inpection_detail"
        android:textColor="@color/c_464646"
        android:textSize="@dimen/dimen_20" />
</LinearLayout>