<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_120"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dimen_52"
        android:layout_marginRight="@dimen/dimen_52"
        android:background="@drawable/corner_radius_6_white_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_29"
            android:text="@string/str_login_error_psd"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0.5"
            android:layout_marginTop="@dimen/dimen_24"
            android:background="@color/c_e7e7e7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_error_message_dialog_sure"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_sure"
                android:textColor="@color/c_5b5b5b"
                android:textSize="@dimen/dimen_18" />

            <ImageView
                android:layout_width="@dimen/dimen_0.5"
                android:layout_height="match_parent"
                android:background="@color/c_e7e7e7" />

            <TextView
                android:id="@+id/login_error_message_dialog_getPassword"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_login_error_find_psd"
                android:textColor="@color/c_00baf3"
                android:textSize="@dimen/dimen_18" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>