<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/create_equipment_mandatory_header_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_20"
        android:background="@color/c_00baf3" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_43"
        android:background="@color/c_00baf3">

        <RelativeLayout
            android:id="@+id/create_equipment_mandatory_header_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/dimen_09"
                android:layout_height="@dimen/dimen_20"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:background="@drawable/icon_back_white" />
        </RelativeLayout>


        <TextView
            android:id="@+id/create_equipment_mandatory_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_equipment_create_mandatory_title"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_17" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_20"
        android:background="@color/c_f9f9f9">
        <View
            android:layout_width="@dimen/dimen_02"
            android:layout_height="@dimen/dimen_14"
            android:layout_gravity="center_vertical"
            android:background="@color/c_00b5f2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/c_00b5f2"
            android:textSize="@dimen/dimen_14"
            android:text="@string/str_equipment_create_mandatory_input"
            android:layout_marginLeft="@dimen/dimen_05"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/create_equipment_mandatory_inspection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_20"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/str_equipment_create_inspection_"
            android:textColor="@color/black"
            android:layout_marginRight="@dimen/dimen_20"
            android:textSize="@dimen/dimen_16"

            />
        <TextView
            android:id="@+id/create_equipment_mandatory_inspection_text"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/c_666666"
            android:textSize="@dimen/dimen_16"
            android:background="@color/white"
            />
        <ImageView
            android:layout_width="@dimen/dimen_05"
            android:layout_height="@dimen/dimen_12"
            android:background="@drawable/icon_arrow_right_gray"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/dimen_15"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:layout_marginLeft="@dimen/dimen_20"
        android:background="@color/c_e9e9e9"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_20"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/str_equipment_create_index_"
            android:textColor="@color/black"
            android:layout_marginRight="@dimen/dimen_20"
            android:textSize="@dimen/dimen_16"

            />
        <EditText
            android:id="@+id/create_equipment_mandatory_index"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/c_666666"
            android:textSize="@dimen/dimen_16"
            android:background="@color/white"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            />
        <RelativeLayout
            android:id="@+id/create_equipment_mandatory_index_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/dimen_10"
            android:paddingLeft="@dimen/dimen_10"
            android:background="@color/white"
            android:visibility="gone">
            <ImageView
                android:layout_width="@dimen/dimen_18"
                android:layout_height="@dimen/dimen_18"
                android:background="@drawable/icon_login_password_delete"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:layout_marginLeft="@dimen/dimen_20"
        android:background="@color/c_e9e9e9"
        />
    <LinearLayout
        android:id="@+id/create_equipment_mandatory_date_parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_20"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/str_equipment_create_date_"
            android:textColor="@color/black"
            android:layout_marginRight="@dimen/dimen_20"
            android:textSize="@dimen/dimen_16"

            />
        <TextView
            android:id="@+id/create_equipment_mandatory_date"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/c_666666"
            android:textSize="@dimen/dimen_16"
            android:background="@color/white"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:layout_marginRight="@dimen/dimen_10"
            />
        <ImageView
            android:layout_width="@dimen/dimen_05"
            android:layout_height="@dimen/dimen_12"
            android:background="@drawable/icon_arrow_right_gray"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/dimen_15"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:layout_marginLeft="@dimen/dimen_20"
        android:background="@color/c_e9e9e9"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_20"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/str_equipment_create_code_"
            android:textColor="@color/black"
            android:layout_marginRight="@dimen/dimen_20"
            android:textSize="@dimen/dimen_16"

            />
        <EditText
            android:id="@+id/create_equipment_mandatory_code"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/c_666666"
            android:textSize="@dimen/dimen_16"
            android:background="@color/white"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            />
        <RelativeLayout
            android:id="@+id/create_equipment_mandatory_code_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/dimen_10"
            android:paddingLeft="@dimen/dimen_10"
            android:background="@color/white"
            android:visibility="gone">
            <ImageView
                android:layout_width="@dimen/dimen_18"
                android:layout_height="@dimen/dimen_18"
                android:background="@drawable/icon_login_password_delete"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:layout_marginLeft="@dimen/dimen_20"
        android:background="@color/c_e9e9e9"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_20"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/str_equipment_create_name_"
            android:textColor="@color/black"
            android:layout_marginRight="@dimen/dimen_20"
            android:textSize="@dimen/dimen_16"

            />
        <EditText
            android:id="@+id/create_equipment_mandatory_name"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="@color/c_666666"
            android:textSize="@dimen/dimen_16"
            android:background="@color/white"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            />
        <RelativeLayout
            android:id="@+id/create_equipment_mandatory_name_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/dimen_10"
            android:paddingLeft="@dimen/dimen_10"
            android:background="@color/white"
            android:visibility="gone">
            <ImageView
                android:layout_width="@dimen/dimen_18"
                android:layout_height="@dimen/dimen_18"
                android:background="@drawable/icon_login_password_delete"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/c_e9e9e9"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/c_f9f9f9">

        <Button
            android:id="@+id/create_equipment_mandatory_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40"
            android:layout_marginLeft="@dimen/dimen_40"
            android:layout_marginRight="@dimen/dimen_40"
            android:layout_marginTop="@dimen/dimen_40"
            android:background="@drawable/corner_radius_33_gray_bg"
            android:text="@string/str_next"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16" />
    </LinearLayout>

</LinearLayout>
